# MonkAI_agent

./: .gitignore  DOCUMENTATION.md  LICENSE  README.md  complex_query_comparison.json  demo.py  demo_jupyter.py  demotest.py  drop_demo.py  fibonacci.py  freeze.txt  groq_comparison_Explain_quantum_computing_in_s.json  groq_comparison_What_are_the_key_principles_of.json  groq_comparison_Write_a_Python_function_to_cal.json  pessoa.py  prompt_comparison_results.json  prompt_testing_creator_results.json  pyproject.toml  pyproject__1.toml  python_developer_agent.py  requeriments.txt  requirements-dev.txt  requirements.txt  requirements.txt.bak  setup.py
apps/demo/: demo.py  demo_jupyter.py  requirements.txt
apps/examples/: prompt_testing_creator_example.py
apps/examples/agent_definition/: agent_definition.ipynb
apps/examples/creators_and_manager/: agent_definition_class.ipynb
apps/examples/triage/: calculator_agents_creator.py  python_developer_agent_creator.py  triage_example.ipynb
apps/tracer_example/: demo.py
apps/ui-streamlit/: README.md  agent_architect_creator.py  groq_agent.py  mokai_ui_agent.py  monkai_agent_ui.py  requirements.txt  test_chat.py  ui.py
core/: base.py  monkai_agent_creator.py  triage_agent_creator.py  util.py
docs/: README.md  api_reference.md
examples/: README.md  agent_definition _class.ipynb  agent_definition.ipynb  agent_definition_class.ipynb  groq_models_example.py  model_testing_ui.py  persona.py  prompt_testing_example.py  requirements.txt  triage_example.ipynb
examples/agent_definition/: README.md  agent_definition.ipynb  analista_negocio_agente_monkai.py
examples/creators_and_manager/: README.md  agent_definition_class.ipynb
examples/demo/: README.md  demo.py  demo_jupyter.py
examples/demo_tracer/: README.md  demo.py
examples/information_researcher/: researcher_agent_criator.py
examples/jornalist/: jornalist_agent_creator.py
examples/mcp_example/: README.md  mcp_agent_example.py  mcp_integration_example.py
examples/mcp_example/mcp-duckduckgo/: README.md  ddg_mcp_agent.py
examples/mcp_example/mcp-gmail/: gmail_mcp_agent.py
examples/mcp_example/mcp-memory/: README.md  mem0_mcp_agent.py  memory_mcp_agent.py
examples/mcp_example/mcp-notion/: README.md  notion_mcp_agent.py
examples/mcp_example/mcp_calculator/: README.md  calculator_agent_creator.py  calculator_example.py  calculator_mcp_server.py  calulation_history.txt  demo.py
examples/python_developer/: python_developer_agent_creator.py
examples/secure_calculator/: calculator_agents_creator.py
examples/tracer_example/: demo.py
examples/triage/: calculator_agents_creator.py  jornalist_agent_creator.py  python_developer_agent_creator.py  triage_example.ipynb
groq_test/: example_usage.py  groq_tester.py  requirements.txt
libs/monkai_agent/: __init__.py  pyproject.toml  setup.py
libs/monkai_agent.azure/: setup.py
libs/monkai_agent.azure/src/: __init__.py  providers.py
libs/monkai_agent.groq/: __init__.py  pyproject.toml
libs/monkai_agent.groq/src/: _providers.py
libs/monkai_agent.groq/src/monkai_agent/groq/: __init__.py
libs/monkai_agent/monkai_agent/: __init__.py  base.py  mcp_agent.py  mcp_prompts.py  repl.py  triage_agent_creator.py  types.py
libs/monkai_agent/monkai_agent.egg-info/: PKG-INFO
libs/monkai_agent/src/: base.py  providers.py
libs/monkai_agent/src/monkai_agent/: __init__.py  base.py  monkai_agent_creator.py  prompt_optimizer.py  providers.py
libs/monkai_agent_groq/: __init__.py  pyproject.toml  setup.py
libs/monkai_agent_groq/monkai_agent/: __init__.py
libs/monkai_agent_groq/monkai_agent/groq/: __providers.py
libs/monkai_agent_groq/src/: __providers.py
libs/openinference_instrumentation_monkai_agent/: pyproject.toml
monkai_agent/: __init__.py  agent.py  base.py  llm_providers.py  memory.py  monkai_agent_creator.py  repl.py  security.py  triage_agent_creator.py  types.py
monkai_agent.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_context_window.py  test_mcp_agent.py  test_rate_limit.py  test_timeout.py
ui/: framework_developer_ui.py  monkai_agent_ui.py  test_chat.py  ui.py
(+2 files in other folders)
