[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "monkai-agent"
version = "0.1.0"
description = "MonkAI Agent Framework with Groq Integration"
requires-python = ">=3.8"
dependencies = [
    "pydantic>=2.0.0",
    "typing-extensions>=4.0.0",
    "openai>=1.0.0",
    "groq"
]

[tool.hatch.build]
packages = [
    "libs/monkai_agent",
    "libs/monkai_agent_groq",
    "libs/openinference_instrumentation_monkai_agent"
    
]

[tool.hatch.build.targets.wheel]
packages = [
    "libs/monkai_agent",
    "libs/monkai_agent_groq",
    "libs/openinference_instrumentation_monkai_agent"
]

[tool.hatch.build.targets.wheel.force-include]
"libs/monkai_agent_groq/monkai_agent" = "monkai_agent"
"libs/openinference_instrumentation_monkai_agent/openinference" = "openinference"