[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "monkai-agent"
version = "0.1.0"
description = "MonkAI Agent Framework with Groq Integration"
requires-python = ">=3.8"
dependencies = [
    "pydantic",
    "typing-extensions",
    "groq",    
    "langchain-groq",
    "python-dotenv",
    "arize-phoenix",
    "mcp[cli]",
    "openinference-instrumentation",
    "openinference-instrumentation-groq",
    "openinference-instrumentation-openai",
    "opentelemetry-api",
    "opentelemetry-exporter-otlp",
    "opentelemetry-exporter-otlp-proto-common",
    "opentelemetry-exporter-otlp-proto-grpc",
    "opentelemetry-exporter-otlp-proto-http",
    "opentelemetry-instrumentation",
    "opentelemetry-instrumentation-asgi",
    "opentelemetry-instrumentation-fastapi",
    "opentelemetry-proto",
    "opentelemetry-sdk",
    "opentelemetry-semantic-conventions",
    "opentelemetry-util-http",
    "openai",
    "tiktoken"
]

[tool.hatch.build]
packages = [
    "libs/monkai_agent",
    "libs/monkai_agent_groq",
    "libs/openinference_instrumentation_monkai_agent"
]

[tool.hatch.build.targets.wheel]
packages = [
    "libs/monkai_agent",
    "libs/monkai_agent_groq",
    "libs/openinference_instrumentation_monkai_agent"
]

[tool.hatch.build.targets.wheel.force-include]
"libs/monkai_agent/monkai_agent" = "monkai_agent"
"libs/monkai_agent_groq/monkai_agent" = "monkai_agent"
"libs/openinference_instrumentation_monkai_agent/openinference" = "openinference"
