[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "monkai-agent"
version = "0.1.0"
description = "MonkAI Agent Framework with Groq Integration"
requires-python = ">=3.8"
dependencies = [
    "pydantic==2.11.7",
    "typing-extensions==4.15.0",
    "groq==0.31.1",
    "langchain-groq==0.3.8",
    "python-dotenv==1.1.1",
    "arize-phoenix==11.32.1",
    "mcp[cli]==1.14.0",
    "openinference-instrumentation==0.1.38",
    "openinference-instrumentation-groq==0.1.11",
    "openinference-instrumentation-openai==0.1.32",
    "opentelemetry-api==1.36.0",
    "opentelemetry-exporter-otlp==1.36.0",
    "opentelemetry-exporter-otlp-proto-common==1.36.0",
    "opentelemetry-exporter-otlp-proto-grpc==1.36.0",
    "opentelemetry-exporter-otlp-proto-http==1.36.0",
    "opentelemetry-instrumentation==0.57b0",
    "opentelemetry-instrumentation-asgi==0.57b0",
    "opentelemetry-instrumentation-fastapi==0.57b0",
    "opentelemetry-proto==1.36.0",
    "opentelemetry-sdk==1.36.0",
    "opentelemetry-semantic-conventions==0.57b0",
    "opentelemetry-util-http==0.57b0",
    "openai==1.107.1",
    "tiktoken==0.11.0"
]

[tool.hatch.build]
packages = [
    "libs/monkai_agent",
    "libs/monkai_agent_groq",
    "libs/openinference_instrumentation_monkai_agent"
]

[tool.hatch.build.targets.wheel]
packages = [
    "libs/monkai_agent",
    "libs/monkai_agent_groq",
    "libs/openinference_instrumentation_monkai_agent"
]

[tool.hatch.build.targets.wheel.force-include]
"libs/monkai_agent/monkai_agent" = "monkai_agent"
"libs/monkai_agent_groq/monkai_agent" = "monkai_agent"
"libs/openinference_instrumentation_monkai_agent/openinference" = "openinference"
